--- a/contacto.html
+++ b/contacto.html
@@ -141,7 +141,7 @@
 
     <div class="container">
         <h1>Contacto</h1>
-        <form action="mailto:cuarzocristalempresarial@gmail.com" method="post" enctype="text/plain">
+        <form action="send_email.php" method="post">
             <div class="form-group">
                 <label for="nombre">Nombre:</label>
                 <input type="text" id="nombre" name="nombre" required>
